rename images directory

--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -183,7 +183,7 @@
             </clipPath>
 
             <g id="wolf_box" data-attach="#_18" class="attached" style="clip-path: url(#clipPath_wolf_box);" data-clip-path="#clipPath_wolf_box">
-                <image width="1441" height="741" x="709.5" y="490.5" data-x-rel="-390.02" xlink:href="../images_for_svg/02.jpg" class="image" id="wpimg"/>
+                <image width="1441" height="741" x="709.5" y="490.5" data-x-rel="-390.02" xlink:href="../img/02.jpg" class="image" id="wpimg"/>
                 <text x="899.5" y="595" data-x-rel="-200.02" id="tw1" class="redText">wolf and lion</text>
             </g>
         </svg>
