beginnings of text

--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>aartics</title>
+	<link href="https://fonts.googleapis.com/css?family=ABeeZee" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/jquery.jInvertScroll.js"></script>
     <link rel="stylesheet" href="css/aartics.css" />
@@ -12,6 +13,9 @@
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="3000px" height="760">
 
             <!-- BEGIN POLYGONS -->
+            <polygon id="s95" class="cls-1" points="2513.5 459.5 2548.5 463.5 2596.5 546.5 2558.5 538.5 2513.5 459.5"/>
+            <polygon id="s37" class="cls-1" points="1731.5 648.5 1676.5 622.5 1628.5 539.5 1679.5 559.5 1731.5 648.5"/>
+            <polygon id="yy2" class="cls-1" points="2099.5 623.5 1960.5 566.5 1994.5 501.5 2145.5 544.5 2099.5 623.5"/>
             <polygon id="xx03" class="cls-1" points="2329.5 296.5 2310.5 302.5 2356.5 223.5 2377.5 214.5 2329.5 296.5"/>
             <polygon id="xx04" class="cls-1" points="2309.5 302.5 2329.5 296.5 2377.5 379.5 2353.5 379.5 2309.5 302.5"/>
             <polygon id="s8" class="cls-1" points="1144.5 179.5 1182.5 246.5 1197.5 242.5 1157.5 173.5 1144.5 179.5"/>
@@ -88,13 +92,11 @@
             <polygon id="s51" class="cls-1" points="1642.5 381.5 1571.5 504.5 1490.5 467.5 1541.5 379.5 1642.5 381.5"/>
             <polygon id="_27" data-name="27" class="cls-2" points="1810.32 146.5 1719.68 146.5 1674.36 225 1719.68 303.5 1810.32 303.5 1855.64 225 1810.32 146.5"/>
             <polygon id="_28" data-name="28" class="cls-2" points="1969.42 215.5 1873.58 215.5 1825.66 298.5 1873.58 381.5 1969.42 381.5 2017.34 298.5 1969.42 215.5"/>
-            <polygon id="yy2" class="cls-1" points="2099.5 623.5 1960.5 566.5 1994.5 501.5 2145.5 544.5 2099.5 623.5"/>
             <polygon id="_32" data-name="32" class="cls-2" points="2237.48 543.5 2144.52 543.5 2098.05 624 2144.52 704.5 2237.48 704.5 2283.95 624 2237.48 543.5"/>
             <polygon id="s74" class="cls-1" points="2199.5 215.5 2191.5 224.5 2234.5 147.5 2246.5 133.5 2199.5 215.5"/>
             <polygon id="_38" data-name="38" class="cls-2" points="2273.54 51.5 2179.62 51.5 2132.66 132.84 2179.62 214.17 2273.54 214.17 2320.5 132.84 2273.54 51.5"/>
             <polygon id="s97" class="cls-1" points="2341.5 524.5 2377.5 537.5 2422.5 459.5 2381.5 452.5 2341.5 524.5"/>
             <polygon id="_45" data-name="45" class="cls-2" points="2513.32 459.5 2422.68 459.5 2377.36 538 2422.68 616.5 2513.32 616.5 2558.64 538 2513.32 459.5"/>
-            <polygon id="s95" class="cls-1" points="2513.5 459.5 2548.5 463.5 2596.5 546.5 2558.5 538.5 2513.5 459.5"/>
             <polygon id="s96" class="cls-1" points="2477.5 468.96 2381.5 453.96 2341.5 380.5 2426.5 380.96 2477.5 468.96"/>
             <polygon id="_46" data-name="46" class="cls-2" points="2578.36 293.5 2477.33 293.5 2426.81 381 2477.33 468.5 2578.36 468.5 2628.88 381 2578.36 293.5"/>
             <polygon id="_36" data-name="36" class="cls-2" points="2472.84 215.5 2378.16 215.5 2330.82 297.5 2378.16 379.5 2472.84 379.5 2520.18 297.5 2472.84 215.5"/>
@@ -117,7 +119,6 @@
             <polygon id="_34" data-name="34" class="cls-2" points="1980.79 550.5 1883.21 550.5 1834.43 635 1883.21 719.5 1980.79 719.5 2029.57 635 1980.79 550.5"/>
             <polygon id="s61" class="cls-1" points="1827.5 525.5 1910.5 525.5 1948.48 539.07 1980.5 550.5 1883.5 550.5 1827.5 525.5"/>
             <polygon id="_29" data-name="29" class="cls-2" points="1834.67 469.5 1731.33 469.5 1679.65 559 1731.33 648.5 1834.67 648.5 1886.35 559 1834.67 469.5"/>
-            <polygon id="s37" class="cls-1" points="1731.5 648.5 1676.5 622.5 1628.5 539.5 1679.5 559.5 1731.5 648.5"/>
             <polygon id="s59" class="cls-1" points="1999.5 381.5 2050.5 469.5 1951.5 453.5 1910.5 381.73 1999.5 381.5"/>
             <polygon id="_35" data-name="35" class="cls-2" points="2151.52 293.96 2050.17 293.96 1999.5 381.73 2050.17 469.5 2151.52 469.5 2202.19 381.73 2151.52 293.96"/>
             <polygon id="s38" class="cls-1" points="1490.5 466.5 1544.5 545.5 1642.5 626.5 1573.5 503.5 1490.5 466.5"/>
@@ -157,7 +158,13 @@
             <polygon id="_14" data-name="14" class="cls-2" points="1092.48 542.5 999.52 542.5 953.05 623 999.52 703.5 1092.48 703.5 1138.95 623 1092.48 542.5"/>
             <polygon id="_8" data-name="8" class="cls-2" points="1072.38 75.5 984.62 75.5 940.74 151.5 984.62 227.5 1072.38 227.5 1116.26 151.5 1072.38 75.5"/>
             <polygon id="s100" class="cls-1" points="1125.5 204.5 1176.5 291.5 1100.5 314.5 1061.5 247.5 1125.5 204.5"/>
-            <polygon id="_13" data-name="13" class="cls-2" points="1106.44 379.5 1010.02 379.5 961.82 463 1010.02 546.5 1106.44 546.5 1154.65 463 1106.44 379.5"/>
+            <g id="m_d_i_a_box" data-attach="#_13" class="attached">
+                <polygon id="_13" data-name="13" class="cls-2" points="1106.44 379.5 1010.02 379.5 961.82 463 1010.02 546.5 1106.44 546.5 1154.65 463 1106.44 379.5"/>
+                <text x="1000" y="425" data-x-rel="-150" id="mdia7">multi -</text>
+                <text x="1000" y="450" data-x-rel="-175" id="mdia7">dimensional</text>
+                <text x="1000" y="475" data-x-rel="-165" id="mdia7">information</text>
+                <text x="1000" y="500" data-x-rel="-150" id="mdia7">architecture</text>
+            </g>
             <polygon id="s44" class="cls-1" points="1100.5 602.5 1014.5 549.5 976.5 470.5 1037.5 493.5 1100.5 602.5"/>
             <polygon id="_15" data-name="15" class="cls-2" points="1287.1 469.5 1184.29 469.5 1132.89 558.53 1184.29 647.57 1287.1 647.57 1338.5 558.53 1287.1 469.5"/>
             <polygon id="s31" class="cls-1" points="1338.5 558.5 1317.5 567.5 1263.5 661.5 1287.5 647.5 1338.5 558.5"/>
@@ -166,12 +173,21 @@
             <polygon id="s24" class="cls-1" points="1291.5 475.5 1342.5 564.5 1378.5 591.5 1317.5 486.5 1291.5 475.5"/>
             <polygon id="s2" class="cls-1" points="680.5 178.5 667.5 104.5 719.5 196.5 719.5 245.5 680.5 178.5"/>
             <polygon id="_6" data-name="6" class="cls-2" points="815.57 214.29 720.19 214.29 672.5 296.9 720.19 379.5 815.57 379.5 863.26 296.9 815.57 214.29"/>
-            <polygon id="_11" data-name="11" class="cls-2" points="1125.88 204.16 1024.66 204.16 974.04 291.83 1024.66 379.5 1125.88 379.5 1176.5 291.83 1125.88 204.16"/>
+            <g id="i_r_p_box" data-attach="#_11" class="attached">
+                <polygon id="_11" data-name="11" class="cls-2" points="1125.88 204.16 1024.66 204.16 974.04 291.83 1024.66 379.5 1125.88 379.5 1176.5 291.83 1125.88 204.16"/>
+                <text x="1000" y="275" data-x-rel="-145" id="tirp5">ideation</text>
+                <text x="1000" y="300" data-x-rel="-154" id="tirp5">+ rapid</text>
+                <text x="1000" y="325" data-x-rel="-175" id="tirp5">prototyping</text>
+            </g>
             <polygon id="s5" class="cls-1" points="974.5 467.5 1036.5 490.5 909.5 490.5 871.5 467.5 974.5 467.5"/>
             <polygon id="_4" data-name="4" class="cls-2" points="825.83 13.5 720.17 13.5 667.35 105 720.17 196.5 825.83 196.5 878.65 105 825.83 13.5"/>
             <polygon id="s19" class="cls-1" points="719.5 214.5 815.5 214.5 825.5 196.5 719.5 196.5 719.5 214.5"/>
             <polygon id="s18" class="cls-1" points="842.5 169.5 815.5 214.5 863.5 296.5 903.5 273.5 842.5 169.5"/>
-            <polygon id="_12" data-name="12" class="cls-2" points="973.98 292.5 872.95 292.5 822.43 380 872.95 467.5 973.98 467.5 1024.5 380 973.98 292.5"/>
+            <g id="r_b_d_box" data-attach="#_12" class="attached">
+                <polygon id="_12" data-name="12" class="cls-2" points="973.98 292.5 872.95 292.5 822.43 380 872.95 467.5 973.98 467.5 1024.5 380 973.98 292.5"/>
+                <text x="1000" y="375" data-x-rel="-155" id="trdb3">research</text>
+                <text x="1000" y="400" data-x-rel="-165" id="trdb4">by design</text>
+            </g>
             <polygon id="s4" class="cls-1" points="871.5 292.5 903.5 273.5 1024.5 273.5 974.5 292.5 871.5 292.5"/>
             <polygon id="s3" class="cls-1" points="658.5 488.5 720.5 596.5 720.5 525.5 679.5 453.5 658.5 488.5"/>
             <polygon id="_3" data-name="3" class="cls-2" points="658.07 488.5 533.93 488.5 471.87 596 533.93 703.5 658.07 703.5 720.13 596 658.07 488.5"/>
@@ -185,18 +201,28 @@
             <polygon id="_40" data-name="40" class="cls-2" points="2379.09 468.5 2276.91 468.5 2225.81 557 2276.91 645.5 2379.09 645.5 2430.19 557 2379.09 468.5"/>
             <!-- END POLYGONS -->
 
-            <g id="contact_box" data-attach="#_1" class="attached">
-                <text x="402.5" y="380" data-x-rel="-320" id="ts1"><a href="mailto:aartics@gmail.com">aartics@gmail.com</a></text>
-                <text x="402.5" y="420" data-x-rel="-320" id="ts2">ux designer</text>
-            </g>
-
             <clipPath id="clipPath_wolf_box">
                 <polygon points="1036.3 490.5 909.86 490.5 846.64 600 909.86 709.5 1036.3 709.5 1099.52 600 1036.3 490.5"/>
             </clipPath>
 
+            <g id="contact_box" data-attach="#_1" class="attached">
+                <text x="402.5" y="370" data-x-rel="-320" id="ts1"><a href="mailto:aartics@gmail.com">aartics@gmail.com</a></text>
+                <text x="402.5" y="390" data-x-rel="-320" id="ts2">ux + product + interaction</text>
+                <text x="402.5" y="410" data-x-rel="-320" id="ts2">designer</text>
+            </g>
+
             <g id="wolf_box" data-attach="#_18" class="attached" style="clip-path: url(#clipPath_wolf_box);" data-clip-path="#clipPath_wolf_box">
-                <image width="1441" height="741" x="709.5" y="490.5" data-x-rel="-390.02" xlink:href="../img/02.jpg" class="image" id="wpimg"/>
-                <text x="899.5" y="595" data-x-rel="-200.02" id="tw1" class="redText">wolf and lion</text>
+<!--                 <image width="1441" height="741" x="709.5" y="490.5" data-x-rel="-390.02" xlink:href="../img/02.jpg" class="image" id="wpimg"/> -->
+                <text x="1000" y="610" data-x-rel="-205" id="tw1">wolf and lion</text>
+            </g>
+
+            <clipPath id="clipPath_resonate_box">
+                <polygon points="1024.04 64.5 903.11 64.5 842.65 169.22 903.11 273.95 1024.04 273.95 1084.5 169.22 1024.04 64.5"/>
+            </clipPath>
+
+            <g id="resonate_ai_box" data-attach="#_7" class="attached" style="clip-path: url(#clipPath_resonate_box);" data-clip-path="#clipPath_resonate_box">
+<!--                 <image width="1441" height="741" x="709.5" y="490.5" data-x-rel="-390.02" xlink:href="../img/02.jpg" class="image" id="wpimg"/> -->
+                <text x="1000" y="175" data-x-rel="-185" id="trai6">resonate.ai</text>
             </g>
         </svg>
     </div>
