major text placeholders and resume

--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -52,8 +52,14 @@
             <polygon id="s56" class="cls-1" points="2017.5 298.5 1969.42 215.5 2099.5 169.5 2159.5 274.5 2017.5 298.5"/>
             <polygon id="s94" class="cls-1" points="2391.5 564.5 2426.5 625.5 2572.5 702.5 2526.5 622.5 2391.5 564.5"/>
             <polygon id="_50" data-name="50" class="cls-2" points="2725.61 144.5 2635.54 144.5 2590.5 222.5 2635.54 300.51 2725.61 300.51 2770.64 222.5 2725.61 144.5"/>
-            <polygon id="_49" data-name="49" class="cls-2" points="2716.96 301.5 2628.04 301.5 2583.59 378.5 2628.04 455.5 2716.96 455.5 2761.41 378.5 2716.96 301.5"/>
-            <polygon id="_48" data-name="48" class="cls-2" points="2809.67 468.5 2706.33 468.5 2654.65 558 2706.33 647.5 2809.67 647.5 2861.35 558 2809.67 468.5"/>
+            <g id="linkedin_box" data-attach="#_49" class="attached">
+                <polygon id="_49" data-name="49" class="cls-2" points="2716.96 301.5 2628.04 301.5 2583.59 378.5 2628.04 455.5 2716.96 455.5 2761.41 378.5 2716.96 301.5"/>
+                <text x="1000" y="380" data-x-rel="-120" id="linkedin1"><a href="https://www.linkedin.com/in/aartics">linkedin</a></text>
+            </g>
+            <g id="resume_box" data-attach="#_48" class="attached">
+                <polygon id="_48" data-name="48" class="cls-2" points="2809.67 468.5 2706.33 468.5 2654.65 558 2706.33 647.5 2809.67 647.5 2861.35 558 2809.67 468.5"/>
+                <text x="1000" y="560" data-x-rel="-140" id="resume1"><a href="aartics_resume.pdf">resume</a></text>
+            </g>
             <polygon id="s85" class="cls-1" points="2651.5 621.5 2706.5 647.5 2654.5 557.5 2605.5 541.5 2651.5 621.5"/>
             <polygon id="s66" class="cls-1" points="2670.5 463.5 2706.5 468.5 2654.5 557.5 2622.5 546.5 2670.5 463.5"/>
             <polygon id="_42" data-name="42" class="cls-2" points="2665.48 541.5 2572.52 541.5 2526.05 622 2572.52 702.5 2665.48 702.5 2711.95 622 2665.48 541.5"/>
@@ -79,7 +85,12 @@
             <polygon id="s58" class="cls-1" points="2017.5 298.5 2050.5 293.5 1999.5 381.5 1969.42 381.5 2017.5 298.5"/>
             <polygon id="s35" class="cls-1" points="1805.5 303.5 1825.5 298.5 1873.5 381.5 1849.5 381.5 1805.5 303.5"/>
             <polygon id="s36" class="cls-1" points="1810.5 303.5 1855.5 224.5 1873.5 215.5 1825.5 298.5 1810.5 303.5"/>
-            <polygon id="_39" data-name="39" class="cls-2" points="2285.31 302.5 2196.93 302.5 2152.74 379.04 2196.93 455.58 2285.31 455.58 2329.5 379.04 2285.31 302.5"/>
+            <g id="grpr_box" data-attach="#_39" class="attached">
+                <polygon id="_39" data-name="39" class="cls-2" points="2285.31 302.5 2196.93 302.5 2152.74 379.04 2196.93 455.58 2285.31 455.58 2329.5 379.04 2285.31 302.5"/>
+                <text x="1000" y="360" data-x-rel="-130" id="grpd1">product</text>
+                <text x="1000" y="385" data-x-rel="-140" id="grpd2">&amp; graphic</text>
+                <text x="1000" y="410" data-x-rel="-130" id="grpd3">design</text>
+            </g>
             <polygon id="_41" data-name="41" class="cls-2" points="2191.42 379.5 2095.58 379.5 2047.66 462.5 2095.58 545.5 2191.42 545.5 2239.34 462.5 2191.42 379.5"/>
             <polygon id="s83" class="cls-1" points="2310.5 548.5 2261.5 524.5 2341.5 524.5 2408.5 548.5 2310.5 548.5"/>
             <polygon id="_37" data-name="37" class="cls-2" points="2294.96 146.5 2206.04 146.5 2161.59 223.5 2206.04 300.5 2294.96 300.5 2339.41 223.5 2294.96 146.5"/>
@@ -88,7 +99,12 @@
             <polygon id="_43" data-name="43" class="cls-2" points="2692.42 381.5 2596.58 381.5 2548.66 464.5 2596.58 547.5 2692.42 547.5 2740.34 464.5 2692.42 381.5"/>
             <polygon id="_47" data-name="47" class="cls-2" points="2408.57 549.5 2310.43 549.5 2261.35 634.5 2310.43 719.5 2408.57 719.5 2457.65 634.5 2408.57 549.5"/>
             <polygon id="s81" class="cls-1" points="2361.5 646.5 2359.5 634.5 2408.5 549.5 2412.5 558.5 2361.5 646.5"/>
-            <polygon id="_26" data-name="26" class="cls-2" points="1804.67 303.5 1715.18 303.5 1670.43 381 1715.18 458.5 1804.67 458.5 1849.41 381 1804.67 303.5"/>
+            <g id="ud_a_box" data-attach="#_26" class="attached">
+                <polygon id="_26" data-name="26" class="cls-2" points="1804.67 303.5 1715.18 303.5 1670.43 381 1715.18 458.5 1804.67 458.5 1849.41 381 1804.67 303.5"/>
+                <text x="1000" y="360" data-x-rel="-150" id="uda1">five years in</text>
+                <text x="1000" y="385" data-x-rel="-155" id="uda2">urban design</text>
+                <text x="1000" y="410" data-x-rel="-165" id="uda3">+ architecture</text>
+            </g>
             <polygon id="s51" class="cls-1" points="1642.5 381.5 1571.5 504.5 1490.5 467.5 1541.5 379.5 1642.5 381.5"/>
             <polygon id="_27" data-name="27" class="cls-2" points="1810.32 146.5 1719.68 146.5 1674.36 225 1719.68 303.5 1810.32 303.5 1855.64 225 1810.32 146.5"/>
             <polygon id="_28" data-name="28" class="cls-2" points="1969.42 215.5 1873.58 215.5 1825.66 298.5 1873.58 381.5 1969.42 381.5 2017.34 298.5 1969.42 215.5"/>
@@ -99,7 +115,10 @@
             <polygon id="_45" data-name="45" class="cls-2" points="2513.32 459.5 2422.68 459.5 2377.36 538 2422.68 616.5 2513.32 616.5 2558.64 538 2513.32 459.5"/>
             <polygon id="s96" class="cls-1" points="2477.5 468.96 2381.5 453.96 2341.5 380.5 2426.5 380.96 2477.5 468.96"/>
             <polygon id="_46" data-name="46" class="cls-2" points="2578.36 293.5 2477.33 293.5 2426.81 381 2477.33 468.5 2578.36 468.5 2628.88 381 2578.36 293.5"/>
-            <polygon id="_36" data-name="36" class="cls-2" points="2472.84 215.5 2378.16 215.5 2330.82 297.5 2378.16 379.5 2472.84 379.5 2520.18 297.5 2472.84 215.5"/>
+            <g id="chess_box" data-attach="#_36" class="attached">
+                <polygon id="_36" data-name="36" class="cls-2" points="2472.84 215.5 2378.16 215.5 2330.82 297.5 2378.16 379.5 2472.84 379.5 2520.18 297.5 2472.84 215.5"/>
+                <text x="1000" y="290" data-x-rel="-150" id="uda1">chess</text>
+            </g>
             <polygon id="s71" class="cls-1" points="2148.5 470.5 2137.5 442.5 2174.5 382.5 2200.5 382.5 2148.5 470.5"/>
             <polygon id="s69" class="cls-1" points="2341.5 169.5 2214.5 193.5 2151.5 293.5 2281.5 274.5 2341.5 169.5"/>
             <polygon id="s55" class="cls-1" points="2151.5 293.5 2281.5 274.5 2159.5 274.5 2050.17 293.96 2151.5 293.5"/>
@@ -120,7 +139,12 @@
             <polygon id="s61" class="cls-1" points="1827.5 525.5 1910.5 525.5 1948.48 539.07 1980.5 550.5 1883.5 550.5 1827.5 525.5"/>
             <polygon id="_29" data-name="29" class="cls-2" points="1834.67 469.5 1731.33 469.5 1679.65 559 1731.33 648.5 1834.67 648.5 1886.35 559 1834.67 469.5"/>
             <polygon id="s59" class="cls-1" points="1999.5 381.5 2050.5 469.5 1951.5 453.5 1910.5 381.73 1999.5 381.5"/>
-            <polygon id="_35" data-name="35" class="cls-2" points="2151.52 293.96 2050.17 293.96 1999.5 381.73 2050.17 469.5 2151.52 469.5 2202.19 381.73 2151.52 293.96"/>
+            <g id="sports_box" data-attach="#_35" class="attached">
+                <polygon id="_35" data-name="35" class="cls-2" points="2151.52 293.96 2050.17 293.96 1999.5 381.73 2050.17 469.5 2151.52 469.5 2202.19 381.73 2151.52 293.96"/>
+                <text x="1000" y="370" data-x-rel="-155" id="sport1">all</text>
+                <text x="1000" y="395" data-x-rel="-155" id="sport2">sports</text>
+                <text x="1000" y="420" data-x-rel="-155" id="sport3">bar</text>
+            </g>
             <polygon id="s38" class="cls-1" points="1490.5 466.5 1544.5 545.5 1642.5 626.5 1573.5 503.5 1490.5 466.5"/>
             <polygon id="s107" class="cls-1" points="1683.5 64.5 1510.5 193.5 1547.5 256.5 1744.5 169.5 1683.5 64.5"/>
             <polygon id="s106" class="cls-1" points="1683.5 275.5 1744.5 169.5 1584.5 237.5 1542.5 292.5 1542.5 292.5 1683.5 275.5"/>
@@ -129,7 +153,12 @@
             <polygon id="s30" class="cls-1" points="1256.5 317.5 1330.5 317.5 1682.5 275.5 1561.5 275.5 1256.5 317.5"/>
             <polygon id="s22" class="cls-1" points="1256.5 317.5 1222.5 379.5 1388.96 380 1439.48 292.5 1256.5 317.5"/>
             <polygon id="s105" class="cls-1" points="1529.5 317.5 1566.5 381.5 1591.5 380.5 1542.5 292.5 1529.5 317.5"/>
-            <polygon id="_22" data-name="22" class="cls-2" points="1540.52 292.5 1439.48 292.5 1388.96 380 1439.48 467.5 1540.52 467.5 1591.04 380 1540.52 292.5"/>
+            <g id="msc_urb_box" data-attach="#_22" class="attached">
+                <polygon id="_22" data-name="22" class="cls-2" points="1540.52 292.5 1439.48 292.5 1388.96 380 1439.48 467.5 1540.52 467.5 1591.04 380 1540.52 292.5"/>
+                <text x="1000" y="370" data-x-rel="-155" id="msc1">european</text>
+                <text x="1000" y="395" data-x-rel="-160" id="msc2">masters in</text>
+                <text x="1000" y="420" data-x-rel="-155" id="msc3">urbanism</text>
+            </g>
             <polygon id="s101" class="cls-1" points="1500.5 591.5 1398 541 1437.5 462.5 1561.5 486.5 1500.5 591.5"/>
             <polygon id="s104" class="cls-1" points="1856.5 503.5 1726.5 458.5 1681.5 380.5 1785.5 381.5 1856.5 503.5"/>
             <polygon id="_30" data-name="30" class="cls-2" points="1784.72 381.5 1643.28 381.5 1572.55 504 1643.28 626.5 1784.72 626.5 1855.45 504 1784.72 381.5"/>
@@ -160,10 +189,10 @@
             <polygon id="s100" class="cls-1" points="1125.5 204.5 1176.5 291.5 1100.5 314.5 1061.5 247.5 1125.5 204.5"/>
             <g id="m_d_i_a_box" data-attach="#_13" class="attached">
                 <polygon id="_13" data-name="13" class="cls-2" points="1106.44 379.5 1010.02 379.5 961.82 463 1010.02 546.5 1106.44 546.5 1154.65 463 1106.44 379.5"/>
-                <text x="1000" y="425" data-x-rel="-150" id="mdia7">multi -</text>
-                <text x="1000" y="450" data-x-rel="-175" id="mdia7">dimensional</text>
-                <text x="1000" y="475" data-x-rel="-165" id="mdia7">information</text>
-                <text x="1000" y="500" data-x-rel="-150" id="mdia7">architecture</text>
+                <text x="1000" y="425" data-x-rel="-120" id="mdia7">multi -</text>
+                <text x="1000" y="450" data-x-rel="-155" id="mdia8">dimensional</text>
+                <text x="1000" y="475" data-x-rel="-155" id="mdia9">information</text>
+                <text x="1000" y="500" data-x-rel="-155" id="mdia10">architecture</text>
             </g>
             <polygon id="s44" class="cls-1" points="1100.5 602.5 1014.5 549.5 976.5 470.5 1037.5 493.5 1100.5 602.5"/>
             <polygon id="_15" data-name="15" class="cls-2" points="1287.1 469.5 1184.29 469.5 1132.89 558.53 1184.29 647.57 1287.1 647.57 1338.5 558.53 1287.1 469.5"/>
@@ -176,8 +205,8 @@
             <g id="i_r_p_box" data-attach="#_11" class="attached">
                 <polygon id="_11" data-name="11" class="cls-2" points="1125.88 204.16 1024.66 204.16 974.04 291.83 1024.66 379.5 1125.88 379.5 1176.5 291.83 1125.88 204.16"/>
                 <text x="1000" y="275" data-x-rel="-145" id="tirp5">ideation</text>
-                <text x="1000" y="300" data-x-rel="-154" id="tirp5">+ rapid</text>
-                <text x="1000" y="325" data-x-rel="-175" id="tirp5">prototyping</text>
+                <text x="1000" y="300" data-x-rel="-154" id="tirp6">+ rapid</text>
+                <text x="1000" y="325" data-x-rel="-175" id="tirp7">prototyping</text>
             </g>
             <polygon id="s5" class="cls-1" points="974.5 467.5 1036.5 490.5 909.5 490.5 871.5 467.5 974.5 467.5"/>
             <polygon id="_4" data-name="4" class="cls-2" points="825.83 13.5 720.17 13.5 667.35 105 720.17 196.5 825.83 196.5 878.65 105 825.83 13.5"/>
@@ -190,7 +219,14 @@
             </g>
             <polygon id="s4" class="cls-1" points="871.5 292.5 903.5 273.5 1024.5 273.5 974.5 292.5 871.5 292.5"/>
             <polygon id="s3" class="cls-1" points="658.5 488.5 720.5 596.5 720.5 525.5 679.5 453.5 658.5 488.5"/>
-            <polygon id="_3" data-name="3" class="cls-2" points="658.07 488.5 533.93 488.5 471.87 596 533.93 703.5 658.07 703.5 720.13 596 658.07 488.5"/>
+            <g id="3d_site_box" data-attach="#_3" class="attached">
+                <polygon id="_3" data-name="3" class="cls-2" points="658.07 488.5 533.93 488.5 471.87 596 533.93 703.5 658.07 703.5 720.13 596 658.07 488.5"/>
+                <text x="1000" y="575" data-x-rel="-200" id="3d9">designing</text>
+                <text x="1000" y="575" data-x-rel="-100" id="3d10">a 3D +</text>
+                <text x="1000" y="605" data-x-rel="-210" id="3d11">inverse +</text>
+                <text x="1000" y="605" data-x-rel="-120" id="3d12">panaromic</text>
+                <text x="1000" y="635" data-x-rel="-135" id="3d13">website</text>
+            </g>
             <polygon id="_24" data-name="24" class="cls-2" points="1683.91 64.5 1562.09 64.5 1501.18 170 1562.09 275.5 1683.91 275.5 1744.82 170 1683.91 64.5"/>
             <polygon id="_7" data-name="7" class="cls-2" points="1024.04 64.5 903.11 64.5 842.65 169.22 903.11 273.95 1024.04 273.95 1084.5 169.22 1024.04 64.5"/>
             <polygon id="_18" data-name="18" class="cls-2" points="1036.3 490.5 909.86 490.5 846.64 600 909.86 709.5 1036.3 709.5 1099.52 600 1036.3 490.5"/>
@@ -201,15 +237,15 @@
             <polygon id="_40" data-name="40" class="cls-2" points="2379.09 468.5 2276.91 468.5 2225.81 557 2276.91 645.5 2379.09 645.5 2430.19 557 2379.09 468.5"/>
             <!-- END POLYGONS -->
 
-            <clipPath id="clipPath_wolf_box">
-                <polygon points="1036.3 490.5 909.86 490.5 846.64 600 909.86 709.5 1036.3 709.5 1099.52 600 1036.3 490.5"/>
-            </clipPath>
-
             <g id="contact_box" data-attach="#_1" class="attached">
                 <text x="402.5" y="370" data-x-rel="-320" id="ts1"><a href="mailto:aartics@gmail.com">aartics@gmail.com</a></text>
                 <text x="402.5" y="390" data-x-rel="-320" id="ts2">ux + product + interaction</text>
                 <text x="402.5" y="410" data-x-rel="-320" id="ts2">designer</text>
             </g>
+
+            <clipPath id="clipPath_wolf_box">
+                <polygon points="1036.3 490.5 909.86 490.5 846.64 600 909.86 709.5 1036.3 709.5 1099.52 600 1036.3 490.5"/>
+            </clipPath>
 
             <g id="wolf_box" data-attach="#_18" class="attached" style="clip-path: url(#clipPath_wolf_box);" data-clip-path="#clipPath_wolf_box">
 <!--                 <image width="1441" height="741" x="709.5" y="490.5" data-x-rel="-390.02" xlink:href="../img/02.jpg" class="image" id="wpimg"/> -->
@@ -224,6 +260,73 @@
 <!--                 <image width="1441" height="741" x="709.5" y="490.5" data-x-rel="-390.02" xlink:href="../img/02.jpg" class="image" id="wpimg"/> -->
                 <text x="1000" y="175" data-x-rel="-185" id="trai6">resonate.ai</text>
             </g>
+
+            <clipPath id="clipPath_sfac_box">
+                <polygon points="1352.45 280.5 1237.55 280.5 1180.11 380 1237.55 479.5 1352.45 479.5 1409.89 380 1352.45 280.5"/>
+            </clipPath>
+
+            <g id="sfac_box" data-attach="#_16" class="attached" style="clip-path: url(#clipPath_sfac_box);" data-clip-path="#clipPath_sfac_box">
+<!--                 <image width="1441" height="741" x="709.5" y="490.5" data-x-rel="-390.02" xlink:href="../img/02.jpg" class="image" id="wpimg"/> -->
+                <text x="1000" y="375" data-x-rel="-185" id="tsfac7">san francisco</text>
+                <text x="1000" y="400" data-x-rel="-195" id="tsfac7">arts commission</text>
+            </g>
+
+            <clipPath id="clipPath_mumbai_box">
+                <polygon points="1784.72 381.5 1643.28 381.5 1572.55 504 1643.28 626.5 1784.72 626.5 1855.45 504 1784.72 381.5"/>
+            </clipPath>
+
+            <g id="mumbai_box" data-attach="#_30" class="attached" style="clip-path: url(#clipPath_mumbai_box);" data-clip-path="#clipPath_mumbai_box">
+<!--                 <image width="1441" height="741" x="709.5" y="490.5" data-x-rel="-390.02" xlink:href="../img/02.jpg" class="image" id="wpimg"/> -->
+                <text x="1000" y="500" data-x-rel="-190" id="mumbai1">recentering</text>
+                <text x="1000" y="525" data-x-rel="-180" id="mumbai2">mumbai</text>
+            </g>
+
+            <clipPath id="clipPath_barcelona_box">
+                <polygon points="1683.91 64.5 1562.09 64.5 1501.18 170 1562.09 275.5 1683.91 275.5 1744.82 170 1683.91 64.5"/>
+            </clipPath>
+
+            <g id="barcelona_box" data-attach="#_24" class="attached" style="clip-path: url(#clipPath_barcelona_box);" data-clip-path="#clipPath_barcelona_box">
+<!--                 <image width="1441" height="741" x="709.5" y="490.5" data-x-rel="-390.02" xlink:href="../img/02.jpg" class="image" id="wpimg"/> -->
+                <text x="1000" y="200" data-x-rel="-190" id="barc1">barcelona</text>
+                <text x="1000" y="225" data-x-rel="-180" id="barc2">la ciudad</text>
+                <text x="1000" y="250" data-x-rel="-180" id="barc2">idea</text>
+            </g>
+
+            <clipPath id="clipPath_graphics_box">
+                <polygon points="2379.09 468.5 2276.91 468.5 2225.81 557 2276.91 645.5 2379.09 645.5 2430.19 557 2379.09 468.5"/>
+            </clipPath>
+
+            <g id="graphics_box" data-attach="#_40" class="attached" style="clip-path: url(#clipPath_graphics_box);" data-clip-path="#clipPath_graphics_box">
+<!--                 <image width="1441" height="741" x="709.5" y="490.5" data-x-rel="-390.02" xlink:href="../img/02.jpg" class="image" id="wpimg"/> -->
+                <text x="1000" y="540" data-x-rel="-150" id="gra1">graphics for</text>
+                <text x="1000" y="565" data-x-rel="-180" id="gra2">self-development</text>
+                <text x="1000" y="590" data-x-rel="-150" id="gra3">program</text>
+            </g>
+
+            <clipPath id="clipPath_octet_box">
+                <polygon points="2705.33 64.5 2584.67 64.5 2524.33 169 2584.67 273.5 2705.33 273.5 2765.67 169 2705.33 64.5"/>
+            </clipPath>
+
+            <g id="octet_box" data-attach="#_44" class="attached" style="clip-path: url(#clipPath_octet_box);" data-clip-path="#clipPath_octet_box">
+<!--                 <image width="1441" height="741" x="709.5" y="490.5" data-x-rel="-390.02" xlink:href="../img/02.jpg" class="image" id="wpimg"/> -->
+                <text x="1000" y="150" data-x-rel="-150" id="oct1">3D printed</text>
+                <text x="1000" y="175" data-x-rel="-180" id="oct2">modular octet</text>
+                <text x="1000" y="200" data-x-rel="-150" id="oct3">truss block</text>
+            </g>
+
+            <g id="credits">
+                <text x="2780" y="530" id="credits0">i designed this 3D interaction with:</text>
+                <text x="2780" y="550" id="credits1">---------------------------------</text>
+                <text x="2800" y="570" id="credits2">sketchup</text>
+                <text x="2800" y="590" id="credits3">photoshop</text>
+                <text x="2800" y="610" id="credits4">illustrator</text>
+                <text x="2800" y="630" id="credits5">javascript</text>
+                <text x="2800" y="650" id="credits6">css</text>
+                <text x="2800" y="670" id="credits7">git</text>
+                <text x="2780" y="690" id="credits8">---------------------------------</text>
+                <text x="2780" y="710" id="credits9">special thanks to @owings1</text>
+                <text x="2780" y="730" id="credits8">---------------------------------</text>
+            </g>                   
         </svg>
     </div>
 	<script src="js/data.js"></script>
