moved resume and linkedin to beginning

--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -52,14 +52,8 @@
             <polygon id="s56" class="cls-1" points="2017.5 298.5 1969.42 215.5 2099.5 169.5 2159.5 274.5 2017.5 298.5"/>
             <polygon id="s94" class="cls-1" points="2391.5 564.5 2426.5 625.5 2572.5 702.5 2526.5 622.5 2391.5 564.5"/>
             <polygon id="_50" data-name="50" class="cls-2" points="2725.61 144.5 2635.54 144.5 2590.5 222.5 2635.54 300.51 2725.61 300.51 2770.64 222.5 2725.61 144.5"/>
-            <g id="linkedin_box" data-attach="#_49" class="attached">
-                <polygon id="_49" data-name="49" class="cls-2" points="2716.96 301.5 2628.04 301.5 2583.59 378.5 2628.04 455.5 2716.96 455.5 2761.41 378.5 2716.96 301.5"/>
-                <text x="1000" y="380" data-x-rel="-120" id="linkedin1"><a href="https://www.linkedin.com/in/aartics">linkedin</a></text>
-            </g>
-            <g id="resume_box" data-attach="#_48" class="attached">
-                <polygon id="_48" data-name="48" class="cls-2" points="2809.67 468.5 2706.33 468.5 2654.65 558 2706.33 647.5 2809.67 647.5 2861.35 558 2809.67 468.5"/>
-                <text x="1000" y="560" data-x-rel="-140" id="resume1"><a href="aartics_resume.pdf">resume</a></text>
-            </g>
+            <polygon id="_49" data-name="49" class="cls-2" points="2716.96 301.5 2628.04 301.5 2583.59 378.5 2628.04 455.5 2716.96 455.5 2761.41 378.5 2716.96 301.5"/>
+            <polygon id="_48" data-name="48" class="cls-2" points="2809.67 468.5 2706.33 468.5 2654.65 558 2706.33 647.5 2809.67 647.5 2861.35 558 2809.67 468.5"/>
             <polygon id="s85" class="cls-1" points="2651.5 621.5 2706.5 647.5 2654.5 557.5 2605.5 541.5 2651.5 621.5"/>
             <polygon id="s66" class="cls-1" points="2670.5 463.5 2706.5 468.5 2654.5 557.5 2622.5 546.5 2670.5 463.5"/>
             <polygon id="_42" data-name="42" class="cls-2" points="2665.48 541.5 2572.52 541.5 2526.05 622 2572.52 702.5 2665.48 702.5 2711.95 622 2665.48 541.5"/>
@@ -238,9 +232,11 @@
             <!-- END POLYGONS -->
 
             <g id="contact_box" data-attach="#_1" class="attached">
-                <text x="402.5" y="370" data-x-rel="-320" id="ts1"><a href="mailto:aartics@gmail.com">aartics@gmail.com</a></text>
-                <text x="402.5" y="390" data-x-rel="-320" id="ts2">ux + product + interaction</text>
-                <text x="402.5" y="410" data-x-rel="-320" id="ts2">designer</text>
+                <text x="402.5" y="370" data-x-rel="-320" id="gmail1"><a href="mailto:aartics@gmail.com">aartics@gmail.com</a></text>
+                <text x="402.5" y="390" data-x-rel="-320" id="title1">ux + product + interaction</text>
+                <text x="402.5" y="410" data-x-rel="-320" id="title2">designer</text>
+                <text x="402.5" y="460" data-x-rel="-320" id="linkedin1"><a href="https://www.linkedin.com/in/aartics">linkedin</a></text>
+                <text x="480" y="460" data-x-rel="-240" id="resume1"><a href="aartics_resume.pdf">| resume</a></text>
             </g>
 
             <clipPath id="clipPath_wolf_box">
